tests/core/snapshots/test-nested-input.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
input A {
  b: B
}

input B {
  c: C
}

scalar Bytes

input C {
  d: D
}

input D {
  e: Int
}

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  a(a: A!): X
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

type X {
  a: String
}

schema {
  query: Query
}
