tests/core/snapshots/test-nested-value.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Post {
  id: Int
  user: User!
}

type Query {
  posts: [Post]
}

type User {
  id: Int!
  name: String
}

schema {
  query: Query
}
