tests/core/snapshots/test-no-base-url.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "  --> 10:20\n   |\n10 |   user: User @http()\n   |                    ^---\n   |\n   = expected name",
    "trace": [],
    "description": null
  }
]
