tests/core/snapshots/test-null-in-object.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Company {
  id: ID
  name: String
}

type Query {
  hi(id: ID!): Company
}

schema {
  query: Query
}
