tests/core/snapshots/test-null-in-object.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream {
  query: Query
}

type Company {
  id: ID
  name: String
}

type Query {
  hi(id: ID!): Company @http(url: "http://localhost:3000/hi")
}
